--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+html, body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE & Edge */
+}
+
 body {
   font-family: "Inter", sans-serif;
   text-align: center;
